@@ -20,10 +20,11 @@ class ExpandPaths(Filter):
             if start == -1 or end == -1:
                 break
             old_path = text[start+1:end]
-            new_path = expand_path(old_path, self.database().media_dir())
-            if sys.platform == "win32":
-                new_path = "/" + new_path.replace("\\", "/")
-            text = text[:start+1] + "file://" + new_path + text[end:]
+            if not old_path.startswith("http:"):
+                new_path = expand_path(old_path, self.database().media_dir())
+                if sys.platform == "win32":
+                    new_path = "/" + new_path.replace("\\", "/")
+                text = text[:start+1] + "file://" + new_path + text[end:]
             # Since text is always longer now, we can start searching
             # from the previous end tag.
             i = text.lower().find("src", end + 1)
