@@ -1,4 +1,4 @@
-version = "2.0-RC2"
+version = "2.0-RC3"
 
 if __name__ == "__main__":
     print version
