@@ -132,6 +132,18 @@ class TestMedia(MnemosyneTest):
             "select count() from log where event_type=?",
             (EventTypes.ADDED_MEDIA_FILE, )).fetchone()[0] == 1
 
+    def test_external_media(self):
+        fact_data = {"f": "<img src=\"http://www.chine-nouvelle.com/jdd/public/ct/pinyinaudio/shu4.mp3\"",
+                     "b": "answer"}
+        card_type = self.card_type_with_id("1")
+        card = self.controller().create_new_cards(fact_data, card_type,
+                                              grade=-1, tag_names=["default"])[0]
+        assert "http" in card.question()
+        assert "file" not in card.question()
+        assert self.database().con.execute(\
+            "select count() from log where event_type=?",
+            (EventTypes.ADDED_MEDIA_FILE, )).fetchone()[0] == 0
+
     def test_card_2(self):
         fact_data = {"f": "<img src=\"a.ogg>", # Missing closing "
                      "b": "answer"}
